--- a/package.json
+++ b/package.json
@@ -239,6 +239,7 @@
     "testRegex": "tests/.*\\.test\\.js$"
   },
   "dependencies": {
+    "@hocs/with-lifecycle": "^0.3.0",
     "babel-polyfill": "6.23.0",
     "chalk": "^1.1.3",
     "compression": "1.6.2",
